# Chronicler

./: .gitignore  CLAUDE.md  README.md  chronicler-phase2-roadmap.md  maf.md  masteraudit.md  opusaudit4-1-26.md  pyproject.toml  setup.bat  setup.sh
.claude/: settings.json
chronicler-agents/: Cargo.toml  pyproject.toml
chronicler-agents/benches/: BENCHMARK_README.md  cache_bench.rs  tick_bench.rs
chronicler-agents/examples/: flamegraph_run.rs
chronicler-agents/src/: agent.rs  behavior.rs  conversion_tick.rs  culture_tick.rs  demographics.rs  ecology.rs  economy.rs  ffi.rs  formation.rs  household.rs  knowledge.rs  lib.rs  memory.rs  merchant.rs  named_characters.rs  needs.rs  politics.rs  pool.rs  region.rs  relationships.rs  satisfaction.rs  signals.rs  social.rs  sort.rs  spatial.rs  tick.rs
chronicler-agents/src/ffi/: batch.rs  ecology_sim.rs  mod.rs  politics_sim.rs  schema.rs
chronicler-agents/tests/: determinism.rs  m38a_ffi.rs  regression.rs  satisfaction_m38a.rs  test_behavior.rs  test_culture_conversion.rs  test_demographics_integration.rs  test_ecology.rs  test_economy.rs  test_knowledge.rs  test_legacy_memory.rs  test_m50a_relationship_ops.rs  test_m50b_formation.rs  test_m53_ffi.rs  test_m57a_marriage.rs  test_m57b_household.rs  test_memory.rs  test_merchant.rs  test_needs.rs  test_politics.rs  test_social_edges.rs  test_sort.rs  test_spatial.rs  test_spatial_streams.rs  test_urban.rs
prototype/: app.js  index.html  style.css
scenarios/: dead_miles.yaml  fantasy_default.yaml  golden_age.yaml  post_collapse_minnesota.yaml  sentient_vehicle_world.yaml  two_empires.yaml
scripts/: generate_viewer_fixture.py  m53_baseline.py  m53_demographics_probe.py  m53_integration_probe.py  m53_mule_probe.py  m53_oracle_probe.py  m53_social_probe.py  m53b_run_validation.py  m54_baseline_adjudication.py  m58b_convergence_gate.py  m_af1_compare.py  run_oracle_gate.py
test/: test_m30_bridge.py  test_m30_curator.py  test_m30_narrative.py  test_m36_culture.py  test_m38a_factions.py  test_m38a_integration.py  test_m38a_regression.py  test_m38a_temples.py
tests/: conftest.py  legacy_ecology_oracle.py  test_acc_hardening.py  test_accumulator.py  test_action_engine.py  test_adjacency.py  (+108 more)
(+376 files in other folders)
