[project]
name = "chronicler"
version = "0.1.0"
description = "AI-driven civilization chronicle generator"
requires-python = ">=3.13"
dependencies = [
    "pydantic>=2.0",
    "openai>=1.0.0",
    "pyyaml>=6.0",
    "websockets>=13.0",
    "numpy>=2.0",
    "scipy>=1.14",
    "pyarrow>=17.0",
    "arro3-core>=0.4",
]

[project.optional-dependencies]
api = ["anthropic>=0.50.0"]
gemini = ["google-genai"]

[project.scripts]
chronicler = "chronicler.main:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
markers = [
    "slow: marks tests as slow-running multi-seed simulations (deselect with -m 'not slow')",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
]
