[package]
name = "chronicler-agents"
version = "0.1.0"
edition = "2021"

[lib]
name = "chronicler_agents"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.28", features = ["extension-module"] }
pyo3-arrow = "0.17"
arrow = { version = "58", default-features = false, features = ["ffi"] }
rand = "0.8"
rand_chacha = "0.3"
rayon = "1.10"

[target.'cfg(not(target_os = "windows"))'.dependencies]
tikv-jemallocator = "0.6"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
rayon = "1.10"
arrow = { version = "58", default-features = false, features = ["ffi"] }

[profile.release]
codegen-units = 1
lto = true
opt-level = 3

[[bench]]
name = "tick_bench"
harness = false
